# aim_certification_challenge

./: Certification_Tasks_Completed.md  LICENSE  README.md  TASKS.md  langgraph_agent_back.py  pyproject.toml  vercel.json
api/: README.md  agent_with_hitory_code.py  app.py  basic_agent_test.ipynb  cert_agent_eval_ragas_results_for_baseline_retrieval.pkl  cert_agent_eval_ragas_results_for_baseline_retrieval_improved.pkl  data_loader.py  eval_golden_dataset.pkl  eval_ragas_results_for_contextual_compression_retrieval_chain.pkl  langgraph_agent.py  langgraph_agent_multi_user_memory.py  langgraph_agent_v3.py  pd_guidelines.py  prompt.py  prompts.py  prompts_pd.py  proto_agent_eval_advance_retrieval.ipynb  proto_agent_eval_advance_retrieval_back.ipynb  proto_agent_eval_advance_retrieval_improved.ipynb  proto_agent_eval_advance_retrieval_improved_test1.ipynb  proto_agent_eval_advance_retrieval_improved_test2.ipynb  proto_agent_eval_advance_retrival.ipynb  proto_agent_eval_baseline_improved.ipynb  proto_agent_eval_baseline_naive_retrieval.ipynb  proto_agent_eval_baseline_retrieval.ipynb  proto_loaddata_retrievals_evals.ipynb  requirements.txt  retrievers.py  test_agent.py  test_agent_pd.py  test_agent_pd_2.py  tools.py  utils.py  vector_stores.py
data/: blog_crawler.py  filter_files.py
data/data_preschoolers_3-5/: 009_Teaching Kids To Share.txt  013_Game Plan for Peaceful Parenting Your Preschooler.txt  021_Raise a Child Who Loves to Read.txt  (+54 more)
frontend/: README.md  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
prototype/: agent_prototype.ipynb
(+352 files in other folders)
